--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.6.2
 Bootstrap-Flask==2.2.0
 click==8.1.3
 Flask==2.3.2
+Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
